# qfilter

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: cifar10_pqc_conv.py  fashionmnist_qpf.py  mnist_quanvolution.py
qfz/: __init__.py
qfz/benchmarks/: __init__.py  evaluate.py  metrics.py  run_all.py  train.py
qfz/circuits/: __init__.py  hardware_efficient.py  iqp.py  random_circuit.py
qfz/datasets/: __init__.py  loaders.py
qfz/layers/: __init__.py  base.py  encodings.py  pqc_conv.py  qpf.py  quanvolution.py
qfz/models/: __init__.py  classical_cnn.py  hybrid_cnn.py
qfz/utils/: __init__.py  seed.py  visualization.py
results/: cifar10_classical.json  cifar10_pqc.json  cifar10_qpf.json  cifar10_quanv.json  fashionmnist_classical.json  fashionmnist_pqc.json  fashionmnist_qpf.json  fashionmnist_quanv.json  mnist_classical.json  mnist_pqc.json  mnist_qpf.json  mnist_quanv.json  summary.json  summary.md  svhn_classical.json  svhn_pqc.json  svhn_qpf.json  svhn_quanv.json
tests/: test_layers.py  test_models_and_datasets.py  test_quanvolution.py
