[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-filter-zoo"
version = "0.1.0"
description = "Quantum filter layers (quanvolution, QPF, PQC conv) for classical PyTorch models, built on PennyLane."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quantum Filter Zoo contributors" }]
keywords = ["quantum-machine-learning", "pytorch", "pennylane", "quanvolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "pennylane>=0.35",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "torchvision>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[tool.setuptools.packages.find]
include = ["qfz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
